--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>ROCK PAPER SCISSOR</title>
     </head>
     <body>
-        <div class="title">
+        <div class="title h1">
             <span id="rock">ROCK</span>
             <span id="paper">PAPER</span>
             <span id="scissor">SCISSOR</span>
@@ -21,25 +21,25 @@
                 GAME!!!</h2>
             <p>You will be playing againts computer whoever score 5 points first win the game</p>
             <h2>PLEASE SELECT YOUR WEAPON</h2>
-            <div class="img">
-                <img src="images/ROCK.png" class="player-selection" id="ROCK">
-                <img src="images/PAPER.png" class="player-selection" id="PAPER">
-                <img src="images/SCISSOR.png" class="player-selection" id="SCISSOR">
+            <div class="text-center img" id="selection">
+                <img src="images/ROCK.png" class="img-fluid player-selection" id="ROCK">
+                <img src="images/PAPER.png" class="img-fluid player-selection" id="PAPER">
+                <img src="images/SCISSOR.png" class=" img-fluid player-selection" id="SCISSOR">
             </div>
-            <div class="round">
+            <div class="round d-flex">
                 <div class="player-score">
                     <h2 id="scissor">PLAYER</h2>
                     <img src="images/default.png" class="img-player">
-                    <p class="player" id="scissor"></p>
+                    <p class="player" id="scissor">0</p>
                 </div>
                 <h1 class="info" id="default"></h1>
                 <div class="computer-score">
                     <h2 id="paper">COMP</h2>
                     <img src="images/default.png" class="img-computer">
-                    <p class="computer" id="paper"></p>
+                    <p class="computer" id="paper">0</p>
                 </div>
             </div>
-            <div class="result"></div>
+            <div class="winner"></div>
         </div>
         <footer>Imad &copy; 2022</footer>
         <script src="rps.js"></script>
